# basis-rs

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  flake.nix
.claude/rules/: parquet.md
basis/: mod.rs
basis/parquet/: mod.rs
cmake/: BuildHelpers.cmake  Config.cmake.in
cpp/: CMakeLists.txt  basis_parquet.hpp  basis_rs.hpp
cpp/bench/: bench_parquet.cpp
cpp/tests/: CMakeLists.txt  parquet_benchmark.cpp  parquet_codec_test.cpp  parquet_test.cpp
examples/: bench_parquet.rs  write_benchmark.rs
include/: basis_rs.h
include/basis_rs/: parquet.hpp
include/basis_rs/parquet/: parquet.hpp
include/basis_rs/parquet/detail/: cell_codec.hpp  codec.hpp  column_accessor.hpp  query.hpp  type_traits.hpp
src/: cxx_bridge.rs  ffi.rs  lib.rs  parquet.rs
